--- a/index.html
+++ b/index.html
@@ -34,205 +34,205 @@
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
         <div class="person">
             <div class="box-name-person">
-                <i class="fas fa-microphone-slash" aria-hidden="true"></i>
+                <i class="fas fa-microphone-slash fa-xs" aria-hidden="true"></i>
                 <span>Pinco Pallo</span>
             </div>
         </div>
@@ -250,7 +250,7 @@
                 Mute
             </div>
             <div  class="down-triangle">
-                <i class="fas fa-angle-up fa-lg" aria-hidden="true"></i>
+                <i class="fas fa-angle-up fa-xs" aria-hidden="true"></i>
             </div>
             <!-- second icon -->
             <div class="box-icon-name">
@@ -260,7 +260,7 @@
                 Stop Video
             </div>
             <div  class="down-triangle">
-                <i class="fas fa-angle-up fa-lg" aria-hidden="true"></i>
+                <i class="fas fa-angle-up fa-xs" aria-hidden="true"></i>
             </div>
         </div>
         <!-- container footer central part -->
@@ -294,7 +294,7 @@
                 Share Screen
             </div>
             <div  class="down-triangle">
-                <i class="fas fa-angle-up fa-lg" aria-hidden="true"></i>
+                <i class="fas fa-angle-up fa-xs" aria-hidden="true"></i>
             </div>
             <!-- fifth icon -->
             <div class="box-icon-name">
