--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
                 <div  class="more-icon">
                     <i class="fas fa-ellipsis-h fa-lg" aria-hidden="true"></i>
                 More
+                </div>
             </div>
         </div>
         <div class="box-footer right">
