--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <!-- fifth icon -->
             <div class="box-icon-name">
                 <div  class="chat-icon">
-                    <i class="fas fa-share-square fa-lg" aria-hidden="true"></i>
+                    <i class="fas fa-comment fa-lg" aria-hidden="true"></i>
                 </div>
                 Chat
             </div>
@@ -320,8 +320,8 @@
             <div class="box-icon-name">
                 <div  class="more-icon">
                     <i class="fas fa-ellipsis-h fa-lg" aria-hidden="true"></i>
-                More
                 </div>
+                More
             </div>
         </div>
         <div class="box-footer right">
