--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="box-footer left">
             <!-- first icon -->
             <div class="box-icon-name">
-                <div  class="mute-icon">
+                <div>
                     <i class="footer-icon fas fa-microphone fa-lg" aria-hidden="true"></i>
                 </div>
                 Mute
@@ -254,7 +254,7 @@
             </div>
             <!-- second icon -->
             <div class="box-icon-name">
-                <div  class="video-icon">
+                <div>
                     <i class="fas fa-video fa-lg" aria-hidden="true"></i>
                 </div>
                 Stop Video
@@ -267,21 +267,21 @@
         <div class="box-footer center">
            <!-- first icon -->
            <div class="box-icon-name">
-                <div  class="user-icon">
+                <div>
                     <i class="fas fa-user-plus fa-lg" aria-hidden="true"></i>
                 </div>
                 Invite
             </div>
             <!-- second icon -->
             <div class="box-icon-name">
-                <div  class="partecipants-icon">
+                <div>
                     <i class="fas fa-user-friends fa-lg" aria-hidden="true"></i>
                 </div>
                 Manage Partecipants
             </div> 
             <!-- third icon -->           
             <div class="box-icon-name">
-                <div  class="polling-icon">
+                <div>
                     <i class="fas fa-chart-bar fa-lg" aria-hidden="true"></i>
                 </div>
                 Polling
@@ -298,27 +298,27 @@
             </div>
             <!-- fifth icon -->
             <div class="box-icon-name">
-                <div  class="chat-icon">
+                <div>
                     <i class="fas fa-comment fa-lg" aria-hidden="true"></i>
                 </div>
                 Chat
             </div>
             <!-- sixth icon -->
             <div class="box-icon-name">
-                <div  class="record-icon">
+                <div>
                     <i class="fas fa-record-vinyl fa-lg" aria-hidden="true"></i>
                 </div>
                 Record
             </div>
             <div class="box-icon-name">
-                <div  class="Breakout-icon">
+                <div>
                     <i class="fas fa-th-large fa-lg" aria-hidden="true"></i>
                 </div>
                 Breakout Rooms
             </div>
             <!-- ninth icon -->
             <div class="box-icon-name">
-                <div  class="more-icon">
+                <div>
                     <i class="fas fa-ellipsis-h fa-lg" aria-hidden="true"></i>
                 </div>
                 More
